# fuse-extent

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.GPL2  LICENSE.md  README.md  cmakeConfig.h.in  support-fuse-crash-recovery.patch
doc/: 内核函数功能解析.md  内核编译.md  内核调试.md  文件系统相关.md
doc/image/: 数据结构关系图.drawio
doc/实现思路/: fuse_crash.md  fuse_loop.md  fuse_mount.md  fuse_operation.md  fuse_option.md  fuse_session.md  fuse_signal.md  passthrough.md
example/: CMakeLists.txt  passthrough.c  passthrough_cr.c  passthrough_cr_func.c
images/: 流程图.drawio
include/: cmakeConfig.h  fuse_crash.h  fuse_error.h  fuse_helper.h  fuse_kernel.h  fuse_log.h  fuse_loop.h  fuse_mount.h  fuse_operation.h  fuse_option.h  fuse_reply.h  fuse_req.h  fuse_session.h  fuse_signal.h
lib/: CMakeLists.txt  fuse_crash.c  fuse_helper.c  fuse_log.c  fuse_loop.c  fuse_mount.c  fuse_operation.c  fuse_option.c  fuse_reply.c  fuse_session.c  fuse_signal.c
libfuse/example/: passthrough_ll.c
libfuse/lib/: fuse_lowlevel.c
test/: CMakeLists.txt  fuse_mount_test.c  fuse_option_test.c  fuse_session_test.c  fuse_signal_test.c  option_test.py
tests/: Makefile  dir_test.c  file_test.c  filesize_test.c  mmap_test.c  random_test.c  sample_test.c  self_test.c  violence_test.c
tests/docker/: Dockerfile  run.sh  swap.sh
tests/docker/jobs/: functions.sh  testcase.sh
tests/docker/jobs/lib/: file_search.sh
tests/docker/jobs/modules/: 001-mmap-test  002-sparse-file  003-scalability
